--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,5 @@ language: nix
 sudo: required
 before_script:
 - sudo mount -o remount,exec,size=4G,mode=755 /run/user || true
-install:
-- nix-env -i stack
 script:
-- stack build --nix
+- ./scripts/tests.sh
