--- a/elm2nix.cabal
+++ b/elm2nix.cabal
@@ -30,6 +30,7 @@ library
       src
   build-depends:
       base >= 4.7 && < 5
+    , async
     , elm-package
     , elm-compiler
     , directory
