--- a/elm2nix.cabal
+++ b/elm2nix.cabal
@@ -53,6 +53,8 @@ executable elm2nix
   hs-source-dirs:
       elm2nix
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  other-modules:
+      Paths_elm2nix
   build-depends:
       base >= 4.7 && < 5
     , elm2nix
