--- a/elm2nix.cabal
+++ b/elm2nix.cabal
@@ -33,17 +33,22 @@ library
     , aeson
     , async
     , bytestring
+    , binary
     , containers
+    , data-default
     , directory
+    , filepath
     , here
     , mtl
     , process
+    , req
     , text
     , transformers
     , unordered-containers
   exposed-modules:
       Elm2Nix
       Elm2Nix.FixedOutput
+      Elm2Nix.PackagesSnapshot
   other-modules:
       Paths_elm2nix
   default-language: Haskell2010
@@ -58,6 +63,7 @@ executable elm2nix
   build-depends:
       base >= 4.7 && < 5
     , elm2nix
+    , directory
     , optparse-applicative
     , here
     , ansi-wl-pprint
