Haskell parsing of SRC dirs & base nix support

--- a/elm2nix.cabal
+++ b/elm2nix.cabal
@@ -45,6 +45,7 @@ library
     , text
     , transformers
     , unordered-containers
+    , vector
   exposed-modules:
       Elm2Nix
       Elm2Nix.FixedOutput
