--- a/stack.yaml
+++ b/stack.yaml
@@ -1,5 +1,8 @@
-resolver: lts-19.0
+resolver: lts-22.20
 packages:
 - .
+# Use the GHC provided by devenv
+system-ghc: true
+notify-if-nix-on-path: false
 nix:
-  packages: [zlib]
+  enable: false
