--- a/elm2nix.cabal
+++ b/elm2nix.cabal
@@ -32,6 +32,7 @@ library
     , binary
     , containers
     , here
+    , prettyprinter
     , process
     , text
     , transformers
@@ -61,7 +62,7 @@ executable elm2nix
     , elm2nix
     , optparse-applicative
     , here
-    , ansi-wl-pprint
+    , prettyprinter
   default-language: Haskell2010
 
 test-suite elm2nix-test
